--- a/public/index.html
+++ b/public/index.html
@@ -75,5 +75,8 @@
     crossOrigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
+  <script src="../src/js/jquery.main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/revslider@5.4.201-8.6/js/extensions/revolution.extension.actions.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </body>
 </html>
